--- a/css/general.css
+++ b/css/general.css
@@ -13,8 +13,19 @@ GENERAL
 */
 
 body {
-    
+    font-size: 0.8em;
 }
+
+.container {
+    max-width: 1170px;
+    margin: 50px auto 100px;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 
 /* 
 TIPHOGRAPHY SYSTEM
